fix: logo sem visibilidade dark mode

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,7 @@
 .menu-bar {
   background-color: var(--main-blue);
 }
+
+.dark-brand {
+  background-color: #FFF;
+}
